src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@font-face {
  font-family: Nunito;
  font-weight: 100;
  src: url("./assets/fonts/Nunito/Nunito-Light.ttf");
}

@font-face {
  font-family: Nunito;
  font-weight: 500;
  src: url("./assets/fonts/Nunito/Nunito-Medium.ttf");
}

@font-face {
  font-family: Nunito;
  font-weight: 600;
  src: url("./assets/fonts/Nunito/Nunito-Bold.ttf");
}

* {
  font-family: Nunito;
}

body {
  @apply bg-slate-100;
  @apply overflow-hidden;
}
::-webkit-scrollbar {
  width: 0;
  background: transparent;
}

@media screen and(max-width:896px) {
  body {
    @apply overflow-hidden;
  }
}

